# OOPS20-callbacks

./: CMakeLists.txt  callback_x.cpp  qsort_function.cpp  qsort_named.cpp  qsort_struct.cpp  qsort_x.cpp  stdsort_count.cpp  stdsort_x.cpp
